--- a/Day 1 - 5.ipynb
+++ b/Day 1 - 5.ipynb
@@ -35,11 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
+    "from dataclasses import dataclass\n",
     "import doctest\n",
     "import functools\n",
     "import itertools\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,27 +153,21 @@
     "\n",
     "line_re = re.compile(r'(\\d+)-(\\d+) (\\w): (\\w+)')\n",
     "\n",
-    "@dataclass\n",
-    "class Rule:\n",
-    "    lo: int\n",
-    "    hi: int\n",
-    "    el: str\n",
-    "\n",
     "def parse_line(line):\n",
     "    \"\"\"\n",
     "    >>> parse_line('1-3 a: abcde')\n",
-    "    (Rule(1, 3, 'a'), 'abcde')\n",
+    "    ((1, 3, 'a'), 'abcde')\n",
     "    \"\"\"\n",
     "    lo, hi, el, pw = line_re.match(line).groups()\n",
-    "    return Rule(int(lo), int(hi), el), pw\n",
+    "    return ((int(lo), int(hi), el), pw)\n",
     "\n",
-    "def password_conforms_to_rule_initial(rule, password):\n",
+    "def password_conforms_to_rule_original(rule, password):\n",
     "    \"\"\"\n",
-    "    >>> password_conforms_to_rule_initial(*parse_line('1-3 a: abcde'))\n",
+    "    >>> password_conforms_to_rule_original(*parse_line('1-3 a: abcde'))\n",
     "    True\n",
-    "    >>> password_conforms_to_rule_initial(*parse_line('1-3 b: cdefg'))\n",
+    "    >>> password_conforms_to_rule_original(*parse_line('1-3 b: cdefg'))\n",
     "    False\n",
-    "    >>> password_conforms_to_rule_initial(*parse_line('2-9 c: ccccccccc'))\n",
+    "    >>> password_conforms_to_rule_original(*parse_line('2-9 c: ccccccccc'))\n",
     "    True\n",
     "    \"\"\"\n",
     "    counts = collections.Counter(password)\n",
@@ -194,26 +189,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Finding tests in NoName\nTrying:\n    parse_line('1-3 a: abcde')\nExpecting:\n    ((1, 3, 'a'), 'abcde')\nok\nFinding tests in NoName\nTrying:\n    password_conforms_to_rule_initial(*parse_line('1-3 a: abcde'))\nExpecting:\n    True\nok\nTrying:\n    password_conforms_to_rule_initial(*parse_line('1-3 b: cdefg'))\nExpecting:\n    False\nok\nTrying:\n    password_conforms_to_rule_initial(*parse_line('2-9 c: ccccccccc'))\nExpecting:\n    True\nok\nFinding tests in NoName\nTrying:\n    password_conforms_to_rule_official(*parse_line('1-3 a: abcde'))\nExpecting:\n    True\nok\nTrying:\n    password_conforms_to_rule_official(*parse_line('1-3 b: cdefg'))\nExpecting:\n    False\nok\nTrying:\n    password_conforms_to_rule_official(*parse_line('2-9 c: ccccccccc'))\nExpecting:\n    False\nok\n"
+      "Finding tests in NoName\nTrying:\n    parse_line('1-3 a: abcde')\nExpecting:\n    ((1, 3, 'a'), 'abcde')\nok\nFinding tests in NoName\nTrying:\n    password_conforms_to_rule_original(*parse_line('1-3 a: abcde'))\nExpecting:\n    True\nok\nTrying:\n    password_conforms_to_rule_original(*parse_line('1-3 b: cdefg'))\nExpecting:\n    False\nok\nTrying:\n    password_conforms_to_rule_original(*parse_line('2-9 c: ccccccccc'))\nExpecting:\n    True\nok\nFinding tests in NoName\nTrying:\n    password_conforms_to_rule_official(*parse_line('1-3 a: abcde'))\nExpecting:\n    True\nok\nTrying:\n    password_conforms_to_rule_official(*parse_line('1-3 b: cdefg'))\nExpecting:\n    False\nok\nTrying:\n    password_conforms_to_rule_official(*parse_line('2-9 c: ccccccccc'))\nExpecting:\n    False\nok\n"
      ]
     }
    ],
    "source": [
     "doctest.run_docstring_examples(parse_line, globs=None, verbose=True)\n",
-    "doctest.run_docstring_examples(password_conforms_to_rule_initial, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(password_conforms_to_rule_original, globs=None, verbose=True)\n",
     "doctest.run_docstring_examples(password_conforms_to_rule_official, globs=None, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -227,17 +222,97 @@
    "source": [
     "# Final answers\n",
     "with open('day2.txt') as f:\n",
-    "    parsed_rules = [parse_line(l.strip()) for l in f]\n",
-    "    print('Part 1: ', len([l for l in parsed_rules if password_conforms_to_rule_initial(*l)]))\n",
-    "    print('Part 2: ', len([l for l in parsed_rules if password_conforms_to_rule_official(*l)]))\n"
+    "    rules_and_pws = [parse_line(l.strip()) for l in f]\n",
+    "    original_pws = [l for l in rules_and_pws if password_conforms_to_rule_original(*l)]\n",
+    "    official_pws = [l for l in rules_and_pws if password_conforms_to_rule_official(*l)]\n",
+    "    print('Part 1: ', len(original_pws))\n",
+    "    print('Part 2: ', len(official_pws))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 3: Toboggan Trajectory"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import count\n",
+    "\n",
+    "TREE = '#'\n",
+    "\n",
+    "@dataclass\n",
+    "class Map:\n",
+    "    map: str\n",
+    "    w: int\n",
+    "    h: int\n",
+    "\n",
+    "    def at(self, x, y):\n",
+    "        return self.map[(self.w + 1) * (y % self.h) + (x % self.w)]\n",
+    "\n",
+    "def parse_map(map):\n",
+    "    clean_map = map.strip().replace('\\n', '|')\n",
+    "    h = clean_map.count('|') + 1\n",
+    "    w = clean_map.index('|')\n",
+    "    return Map(map=clean_map, h=h, w=w)\n",
+    "\n",
+    "def num_trees_hit(dx, dy, map):\n",
+    "    hits = 0\n",
+    "    for x, y in zip(count(0, dx), range(0, map.h, dy)):\n",
+    "        if map.at(x, y) == TREE:\n",
+    "            hits += 1\n",
+    "    return hits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_map = parse_map(\"\"\"\n",
+    "..##.......\n",
+    "#...#...#..\n",
+    ".#....#..#.\n",
+    "..#.#...#.#\n",
+    ".#...##..#.\n",
+    "..#.##.....\n",
+    ".#.#.#....#\n",
+    ".#........#\n",
+    "#.##...#...\n",
+    "#...##....#\n",
+    ".#..#...#.#\n",
+    "\"\"\")\n",
+    "assert num_trees_hit(dx=3, dy=1, map=test_map) == 7, 'test failed'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  151\nPart 2:  7540141059\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day3.txt') as f:\n",
+    "    map = parse_map(f.read())\n",
+    "    print('Part 1: ', num_trees_hit(dx=3, dy=1, map=map))\n",
+    "    product_of_trees_hit = product(num_trees_hit(dx, dy, map)\n",
+    "                                   for dx, dy in ((1, 1), (3, 1), (5, 1), (7, 1), (1, 2)))\n",
+    "    print('Part 2: ', product_of_trees_hit)"
+   ]
   }
  ]
 }
