--- a/Day 1 - 5.ipynb
+++ b/Day 1 - 5.ipynb
@@ -35,16 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
+    "from collections import Counter\n",
     "from dataclasses import dataclass\n",
     "import doctest\n",
     "import functools\n",
     "import itertools\n",
-    "import math"
+    "import math\n",
+    "import re"
    ]
   },
   {
@@ -312,6 +314,135 @@
     "    product_of_trees_hit = product(num_trees_hit(dx, dy, map)\n",
     "                                   for dx, dy in ((1, 1), (3, 1), (5, 1), (7, 1), (1, 2)))\n",
     "    print('Part 2: ', product_of_trees_hit)"
+   ]
+  },
+  {
+   "source": [
+    "# Day 4: Passport Processing"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "def parse_passport(passport):\n",
+    "    r\"\"\"\n",
+    "    >>> parse_passport(\"pid:100\")\n",
+    "    {'pid': '100'}\n",
+    "    >>> parse_passport(\"ecl:gry  pid:860033327 eyr:2020 hcl:#fffffd\\nbyr:1937 iyr:2017 cid:147 hgt:183cm\")\n",
+    "    {'ecl': 'gry', 'pid': '860033327', 'eyr': '2020', 'hcl': '#fffffd', 'byr': '1937', 'iyr': '2017', 'cid': '147', 'hgt': '183cm'}\n",
+    "    \"\"\"\n",
+    "    return dict(p.split(':') for p in re.split('\\s+', passport) if p)\n",
+    "\n",
+    "def validate_fields_part1(byr, iyr, eyr, hgt, hcl, ecl, pid, cid=None):\n",
+    "    return True\n",
+    "\n",
+    "def validate_fields_part2(byr, iyr, eyr, hgt, hcl, ecl, pid, cid=None):\n",
+    "    \"\"\"\n",
+    "    >>> validate_fields_part2(byr='-1990', iyr='2010', eyr='2020', hgt='155cm', hcl='#fffffd', ecl='amb', pid='860033327')\n",
+    "    False\n",
+    "    >>> validate_fields_part2(byr='1980', iyr='2010', eyr='2020', hgt='155cm', hcl='#ffd', ecl='amb', pid='860033327')\n",
+    "    False\n",
+    "    >>> validate_fields_part2(byr='1980', iyr='2010', eyr='2020', hgt='155cm', hcl='#fffffd', ecl='amb', pid='860033327')\n",
+    "    True\n",
+    "    \"\"\"\n",
+    "    if not (1920 <= int(byr) <= 2002):\n",
+    "        return False\n",
+    "    if not (2010 <= int(iyr) <= 2020):\n",
+    "        return False\n",
+    "    if not (2020 <= int(eyr) <= 2030):\n",
+    "        return False \n",
+    "    if hgt.endswith('cm'):\n",
+    "        if not (150 <= int(hgt[:-2]) <= 193):\n",
+    "            return False\n",
+    "    elif hgt.endswith('in'):\n",
+    "        if not (59 <= int(hgt[:-2]) <= 76):\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "    if not re.match('^#[0-9a-f]{6}$', hcl):\n",
+    "        return False\n",
+    "    if ecl not in {'amb', 'blu', 'brn', 'gry', 'grn', 'hzl', 'oth'}:\n",
+    "        return False\n",
+    "    if len(pid) != 9 or not int(pid):\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def is_valid_passport(passport, validator):\n",
+    "    r\"\"\"\n",
+    "    >>> is_valid_passport(\"\", validator=validate_fields_part1)\n",
+    "    False\n",
+    "    >>> is_valid_passport(\"iyr:2019 \"\n",
+    "    ...                   \"hcl:#602927 eyr:1967 hgt:170cm \"\n",
+    "    ...                   \"ecl:grn pid:012533040 byr:1946\",\n",
+    "    ...                   validator=validate_fields_part1)\n",
+    "    True\n",
+    "    >>> is_valid_passport(\"ecl:gry pid:860033327 eyr:2020 hcl:#fffffd byr:1937 iyr:2017 hgt:183cm\",\n",
+    "    ...                   validator=validate_fields_part1)\n",
+    "    True\n",
+    "    >>> is_valid_passport(\"ecl:gry pid:860033327 eyr:2020 hcl:#fffffd byr:1900 iyr:2017 hgt:183cm\",\n",
+    "    ...                   validator=validate_fields_part2)\n",
+    "    False\n",
+    "    >>> is_valid_passport(\"iyr:2019 \"\n",
+    "    ...                   \"hcl:#602927 eyr:1967 hgt:170cm \"\n",
+    "    ...                   \"ecl:grn pid:012533040 byr:1946\",\n",
+    "    ...                   validator=validate_fields_part2)\n",
+    "    False\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return validator(**parse_passport(passport))\n",
+    "    except:\n",
+    "        return False\n",
+    "\n",
+    "def count_valid_passports(ps, validator):\n",
+    "    return sum(1 if is_valid_passport(p, validator) else 0 for p in ps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    parse_passport(\"pid:100\")\nExpecting:\n    {'pid': '100'}\nok\nTrying:\n    parse_passport(\"ecl:gry  pid:860033327 eyr:2020 hcl:#fffffd\\nbyr:1937 iyr:2017 cid:147 hgt:183cm\")\nExpecting:\n    {'ecl': 'gry', 'pid': '860033327', 'eyr': '2020', 'hcl': '#fffffd', 'byr': '1937', 'iyr': '2017', 'cid': '147', 'hgt': '183cm'}\nok\nFinding tests in NoName\nTrying:\n    validate_fields_part2(byr='-1990', iyr='2010', eyr='2020', hgt='155cm', hcl='#fffffd', ecl='amb', pid='860033327')\nExpecting:\n    False\nok\nTrying:\n    validate_fields_part2(byr='1980', iyr='2010', eyr='2020', hgt='155cm', hcl='#ffd', ecl='amb', pid='860033327')\nExpecting:\n    False\nok\nTrying:\n    validate_fields_part2(byr='1980', iyr='2010', eyr='2020', hgt='155cm', hcl='#fffffd', ecl='amb', pid='860033327')\nExpecting:\n    True\nok\nFinding tests in NoName\nTrying:\n    is_valid_passport(\"\", validator=validate_fields_part1)\nExpecting:\n    False\nok\nTrying:\n    is_valid_passport(\"iyr:2019 \"\n                      \"hcl:#602927 eyr:1967 hgt:170cm \"\n                      \"ecl:grn pid:012533040 byr:1946\",\n                      validator=validate_fields_part1)\nExpecting:\n    True\nok\nTrying:\n    is_valid_passport(\"ecl:gry pid:860033327 eyr:2020 hcl:#fffffd byr:1937 iyr:2017 hgt:183cm\",\n                      validator=validate_fields_part1)\nExpecting:\n    True\nok\nTrying:\n    is_valid_passport(\"ecl:gry pid:860033327 eyr:2020 hcl:#fffffd byr:1900 iyr:2017 hgt:183cm\",\n                      validator=validate_fields_part2)\nExpecting:\n    False\nok\nTrying:\n    is_valid_passport(\"iyr:2019 \"\n                      \"hcl:#602927 eyr:1967 hgt:170cm \"\n                      \"ecl:grn pid:012533040 byr:1946\",\n                      validator=validate_fields_part2)\nExpecting:\n    False\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(parse_passport, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(validate_fields_part2, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(is_valid_passport, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  254\nPart 2:  184\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day4.txt') as f:\n",
+    "    passports = f.read().split('\\n\\n')\n",
+    "    print('Part 1: ', count_valid_passports(passports, validator=validate_fields_part1))\n",
+    "    print('Part 2: ', count_valid_passports(passports, validator=validate_fields_part2))"
    ]
   }
  ]
