--- a/Day 1 - 5.ipynb
+++ b/Day 1 - 5.ipynb
@@ -444,6 +444,95 @@
     "    print('Part 1: ', count_valid_passports(passports, validator=validate_fields_part1))\n",
     "    print('Part 2: ', count_valid_passports(passports, validator=validate_fields_part2))"
    ]
+  },
+  {
+   "source": [
+    "# Day 5: Binary Boarding"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_seat_to_id = str.maketrans('FLBR', '0011')\n",
+    "_row_id_to_seat = str.maketrans('01', 'FB')\n",
+    "_col_id_to_seat = str.maketrans('01', 'LR')\n",
+    "\n",
+    "def decode_seat_id(seat_code):\n",
+    "    \"\"\"\n",
+    "    >>> decode_seat_id('BFFFBBFRRR')\n",
+    "    567\n",
+    "    >>> decode_seat_id('FFFBBBFRRR')\n",
+    "    119\n",
+    "    >>> decode_seat_id('BBFFBBFRLL')\n",
+    "    820\n",
+    "    \"\"\"\n",
+    "    return int(seat_code.translate(_seat_to_id), base=2)\n",
+    "\n",
+    "def encode_seat_id(seat_id):\n",
+    "    \"\"\"\n",
+    "    >>> encode_seat_id(567)\n",
+    "    'BFFFBBFRRR'\n",
+    "    >>> encode_seat_id(119)\n",
+    "    'FFFBBBFRRR'\n",
+    "    >>> encode_seat_id(820)\n",
+    "    'BBFFBBFRLL'\n",
+    "    \"\"\"\n",
+    "    code = f'{seat_id:010b}'\n",
+    "    row = code[:-3].translate(_row_id_to_seat)\n",
+    "    col = code[-3:].translate(_col_id_to_seat)\n",
+    "    return row + col\n",
+    "\n",
+    "def find_missing_seat(seat_codes):\n",
+    "    seat_ids = {decode_seat_id(c) for c in seat_codes}\n",
+    "    for sid in seat_ids:\n",
+    "        if sid + 1 not in seat_ids and sid + 2 in seat_ids:\n",
+    "            return sid + 1, encode_seat_id(sid + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    decode_seat_id('BFFFBBFRRR')\nExpecting:\n    567\nok\nTrying:\n    decode_seat_id('FFFBBBFRRR')\nExpecting:\n    119\nok\nTrying:\n    decode_seat_id('BBFFBBFRLL')\nExpecting:\n    820\nok\nFinding tests in NoName\nTrying:\n    encode_seat_id(567)\nExpecting:\n    'BFFFBBFRRR'\nok\nTrying:\n    encode_seat_id(119)\nExpecting:\n    'FFFBBBFRRR'\nok\nTrying:\n    encode_seat_id(820)\nExpecting:\n    'BBFFBBFRLL'\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(decode_seat_id, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(encode_seat_id, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  991\n",
+      "Part 2:  (534, 'BFFFFBFRRL')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day5.txt') as f:\n",
+    "    seat_codes = {l.strip() for l in f}\n",
+    "    print('Part 1: ', max(decode_seat_id(c) for c in seat_codes))\n",
+    "    print('Part 2: ', find_missing_seat(seat_codes))"
+   ]
   }
  ]
 }
