--- a/Day 1 - 5.ipynb
+++ b/Day 1 - 5.ipynb
@@ -114,7 +114,7 @@
     "with open('day1.txt') as f:\n",
     "    ns = [int(l.strip()) for l in f]\n",
     "    print('Part 1: ', product(pick_numbers_that_sum_to(ns, 2, 2020)))\n",
-    "    print('Part 2: ', product(pick_numbers_that_sum_to(ns, 3, 2020)))\n"
+    "    print('Part 2: ', product(pick_numbers_that_sum_to(ns, 3, 2020)))"
    ]
   },
   {
