--- a/Day 6-10.ipynb
+++ b/Day 6-10.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,11 +310,265 @@
    ]
   },
   {
+   "source": [
+    "# Day 8: Handheld Halting"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from enum import auto, Enum\n",
+    "\n",
+    "def parse_instruction(instr):\n",
+    "    \"\"\"\n",
+    "    >>> parse_instruction('acc -99')\n",
+    "    ('acc', -99)\n",
+    "    >>> parse_instruction('nop +0')\n",
+    "    ('nop', 0)\n",
+    "    \"\"\"\n",
+    "    op, arg = instr.split()\n",
+    "    return op, int(arg)\n",
+    "\n",
+    "def parse_instructions(instrs):\n",
+    "    return [parse_instruction(i)\n",
+    "            for i in instrs.strip().splitlines()]\n",
+    "\n",
+    "class State(Enum):\n",
+    "    TERMINATED = auto()\n",
+    "    RUNNING = auto()\n",
+    "    LOOPED = auto()\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return '<%s.%s>' % (self.__class__.__name__, self.name)\n",
+    "\n",
+    "def execute_until_loop(instrs):\n",
+    "    \"\"\"\n",
+    "    >>> execute_until_loop(parse_instructions('jmp +0'))\n",
+    "    (<State.LOOPED>, 0)\n",
+    "    >>> execute_until_loop(parse_instructions('''\n",
+    "    ...     nop +0  \n",
+    "    ...     acc +1\n",
+    "    ...     jmp +4\n",
+    "    ...     acc +3\n",
+    "    ...     jmp -3\n",
+    "    ...     acc -99\n",
+    "    ...     acc +1\n",
+    "    ...     jmp -4\n",
+    "    ...     acc +6\n",
+    "    ... '''))\n",
+    "    (<State.LOOPED>, 5)\n",
+    "    >>> execute_until_loop(parse_instructions('''\n",
+    "    ...     nop +0\n",
+    "    ...     acc +1\n",
+    "    ...     jmp +4\n",
+    "    ...     acc +3\n",
+    "    ...     jmp -3\n",
+    "    ...     acc -99\n",
+    "    ...     acc +1\n",
+    "    ...     nop -4\n",
+    "    ...     acc +6\n",
+    "    ... '''))\n",
+    "    (<State.TERMINATED>, 8)\n",
+    "    \"\"\"\n",
+    "    acc = ip = 0\n",
+    "    state = State.RUNNING\n",
+    "    exec_counts = [0] * len(instrs)\n",
+    "    while True:\n",
+    "        if ip >= len(instrs):\n",
+    "            return state.TERMINATED, acc\n",
+    "        if exec_counts[ip]:\n",
+    "            return state.LOOPED, acc\n",
+    "\n",
+    "        op, arg = instrs[ip]\n",
+    "        exec_counts[ip] += 1    \n",
+    "        if op == 'nop':\n",
+    "            ip += 1\n",
+    "        elif op == 'jmp':\n",
+    "            ip += arg\n",
+    "        elif op == 'acc':\n",
+    "            acc += arg\n",
+    "            ip += 1\n",
+    "        else:\n",
+    "            raise Exception(f'Unknown op: {op}')\n",
+    "\n",
+    "def suggest_fixed_instructions(instrs):\n",
+    "    \"\"\"\n",
+    "    >>> list(suggest_fixed_instructions([('jmp', 0), ('acc', 3), ('nop', 1)]))\n",
+    "    [[('nop', 0), ('acc', 3), ('nop', 1)], [('jmp', 0), ('acc', 3), ('jmp', 1)]]\n",
+    "    \"\"\"\n",
+    "    for i in range(len(instrs)):\n",
+    "        op, arg = instrs[i]\n",
+    "        if op == 'jmp':\n",
+    "            op = 'nop'\n",
+    "        elif op == 'nop':\n",
+    "            op = 'jmp'\n",
+    "        else:\n",
+    "            continue\n",
+    "        yield instrs[:i] + [(op, arg)] + instrs[i+1:]\n",
+    "\n",
+    "def fix_and_execute_until_termination(instrs):\n",
+    "    \"\"\"\n",
+    "    >>> fix_and_execute_until_termination(parse_instructions('''\n",
+    "    ...     nop +0  \n",
+    "    ...     acc +1\n",
+    "    ...     jmp +4\n",
+    "    ...     acc +3\n",
+    "    ...     jmp -3\n",
+    "    ...     acc -99\n",
+    "    ...     acc +1\n",
+    "    ...     jmp -4\n",
+    "    ...     acc +6\n",
+    "    ... '''))\n",
+    "    8\n",
+    "    \"\"\"\n",
+    "    for maybe_fixed_instrs in suggest_fixed_instructions(instrs):\n",
+    "        state, acc = execute_until_loop(maybe_fixed_instrs)\n",
+    "        if state == State.TERMINATED:\n",
+    "            return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    parse_instruction('acc -99')\nExpecting:\n    ('acc', -99)\nok\nTrying:\n    parse_instruction('nop +0')\nExpecting:\n    ('nop', 0)\nok\nFinding tests in NoName\nTrying:\n    execute_until_loop(parse_instructions('jmp +0'))\nExpecting:\n    (<State.LOOPED>, 0)\nok\nTrying:\n    execute_until_loop(parse_instructions('''\n        nop +0  \n        acc +1\n        jmp +4\n        acc +3\n        jmp -3\n        acc -99\n        acc +1\n        jmp -4\n        acc +6\n    '''))\nExpecting:\n    (<State.LOOPED>, 5)\nok\nTrying:\n    execute_until_loop(parse_instructions('''\n        nop +0\n        acc +1\n        jmp +4\n        acc +3\n        jmp -3\n        acc -99\n        acc +1\n        nop -4\n        acc +6\n    '''))\nExpecting:\n    (<State.TERMINATED>, 8)\nok\nFinding tests in NoName\nTrying:\n    list(suggest_fixed_instructions([('jmp', 0), ('acc', 3), ('nop', 1)]))\nExpecting:\n    [[('nop', 0), ('acc', 3), ('nop', 1)], [('jmp', 0), ('acc', 3), ('jmp', 1)]]\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(parse_instruction, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(execute_until_loop, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(suggest_fixed_instructions, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  1420\nPart 2:  1245\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day8.txt') as f:\n",
+    "    instrs = parse_instructions(f.read())\n",
+    "    print('Part 1: ', execute_until_loop(instrs)[1])\n",
+    "    print('Part 2: ', fix_and_execute_until_termination(instrs))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 9: Encoding Error"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations, islice\n",
+    "\n",
+    "def first_invalid_number(ns, prev_n=25):\n",
+    "    \"\"\"\n",
+    "    >>> first_invalid_number([\n",
+    "    ...     35, 20, 15, 25, 47, 40, 62, 55, 65,\n",
+    "    ...     95, 102, 117, 150, 182, 127, 219\n",
+    "    ... ], prev_n=5)\n",
+    "    127\n",
+    "    \"\"\"\n",
+    "    for i, n in islice(enumerate(ns), prev_n, None):\n",
+    "        preamble = ns[i-prev_n:i]\n",
+    "        if any(sum(p) == ns[i] for p in combinations(preamble, 2)):\n",
+    "            continue\n",
+    "        return n\n",
+    "\n",
+    "\n",
+    "def span_summing_to(ns, n):\n",
+    "    \"\"\"\n",
+    "    >>> span_summing_to([35, 20, 15, 25, 47, 40, 62, 55, 65], 127)\n",
+    "    [15, 25, 47, 40]\n",
+    "    \"\"\"\n",
+    "    for i in range(len(ns)):\n",
+    "        total = 0\n",
+    "        for j in range(i, len(ns)):\n",
+    "            total += ns[j]\n",
+    "            if total == n:\n",
+    "                return ns[i:j+1]\n",
+    "            elif total > n:\n",
+    "                break\n",
+    "            \n",
+    "\n",
+    "def encryption_weakness(ns, prev_n=25):\n",
+    "    \"\"\"\n",
+    "    >>> encryption_weakness([\n",
+    "    ...     35, 20, 15, 25, 47, 40, 62, 55, 65,\n",
+    "    ...     95, 102, 117, 150, 182, 127, 219\n",
+    "    ... ], prev_n=5)\n",
+    "    62\n",
+    "    \"\"\"\n",
+    "    invalid_num = first_invalid_number(ns, prev_n)\n",
+    "    rs = span_summing_to(ns, invalid_num)\n",
+    "    return min(rs) + max(rs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    first_invalid_number([\n        35, 20, 15, 25, 47, 40, 62, 55, 65,\n        95, 102, 117, 150, 182, 127, 219\n    ], prev_n=5)\nExpecting:\n    127\nok\nFinding tests in NoName\nTrying:\n    span_summing_to([35, 20, 15, 25, 47, 40, 62, 55, 65], 127)\nExpecting:\n    [15, 25, 47, 40]\nok\nFinding tests in NoName\nTrying:\n    encryption_weakness([\n        35, 20, 15, 25, 47, 40, 62, 55, 65,\n        95, 102, 117, 150, 182, 127, 219\n    ], prev_n=5)\nExpecting:\n    62\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(first_invalid_number, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(span_summing_to, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(encryption_weakness, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  21806024\nPart 2:  2986195\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day9.txt') as f:\n",
+    "    ns = [int(l) for l in f]\n",
+    "    print('Part 1: ', first_invalid_number(ns))\n",
+    "    print('Part 2: ', encryption_weakness(ns))"
+   ]
   }
  ]
 }
